--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,14 @@
   pointer-events: none;
 }
 
+.center{
+  display: flex;
+  justify-content: center;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite 2s linear;
   }
 }
 
